Fix text align issue ColorText

--- a/frontend/src/css-modules/ColorText.module.css
+++ b/frontend/src/css-modules/ColorText.module.css
@@ -1,7 +1,6 @@
 .colorText {
     display: inline-block;
     padding: 0.25rem 0.75rem;
-    text-align: center;
     border-radius: 0.325rem;
     width: fit-content;
     display: flex;
